Added YAML file

--- a/.github/workflows/read.yml
+++ b/.github/workflows/read.yml
@@ -1,5 +1,22 @@
-name: "hello"
+name: "hello-workflow"
+
 on:
+  push:
     branches:
-        -main
-        
+      - main
+  pull_request:
+    branches:
+      - main
+      
+jobs:
+  hello:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Print message
+        run: echo "Hello, world! This is a GitHub Actions workflow."
+      
+      - name: List files
+        run: ls -la
