--- a/.github/workflows/read.yml
+++ b/.github/workflows/read.yml
@@ -1,13 +1,12 @@
-name: "My GitHub Action"
+name: "Hello world"
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
-  demo:
+  demo-job:
     runs-on: ubuntu-latest
     steps:
-      - name: "print hello world"
-        run: echo "hello world"
+      - name:checkout code
+        echo: "Hello world"
