--- a/.github/workflows/read.yml
+++ b/.github/workflows/read.yml
@@ -9,4 +9,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name:checkout code
-        echo: "Hello world"
+        run: echo "Hello world"
