--- a/.github/workflows/read.yml
+++ b/.github/workflows/read.yml
@@ -1,15 +1,18 @@
-name: "Hello world"
+name: "GIT-Workflow"
 
 on:
   push:
-    branches: [main]
+    branches:
+      - main
+  
+  pull_request:
+    branches:
+      - main
+  workflow_dispatch:
 
-jobs:
-  demo-jobs:
-    runs-on: ubuntu-latest
-    steps:
-      - name: checkout
-        uses: actions/checkout@v3
-
-      - name: print hello world
-        run: echo "Hello world"   
+  jobs:
+    demo:
+      runs-on: ubuntu-latest
+      stepes:
+        - name: fine message
+          run: echo "this commit is fine"
